# self-healing-docs

./: .gitattributes  .gitignore  Architecture.md  Design.md  Dockerfile  Memory.md  PRD.md  Phases.md  README.md  Rules.md  action.yml  entrypoint.sh  pyproject.toml
.github/workflows/: ci.yml  self-test.yml
src/dochealer/: config.py  main.py  models.py  report.py
src/dochealer/detection/: change_filter.py  diff_parser.py  staleness.py
src/dochealer/github/: commenter.py  pr_writer.py
src/dochealer/indexing/: code_parser.py  doc_parser.py  embedder.py  linker.py
src/dochealer/llm/: client.py
src/dochealer/repair/: corrector.py  validator.py
tests/: conftest.py  test_change_filter.py  test_code_parser.py  test_diff_parser.py  test_doc_parser.py  test_linker.py  test_llm_client.py  test_pipeline.py  test_repair.py  test_staleness.py
tests/fixtures/sample_repo/docs/: guide.md
tests/fixtures/sample_repo/src/: app.py
